# gpt-kicktipp

./: README.md  example.env  game_day_2.json  game_day_3.json  game_day_4.json  main.py  prompt.txt.j2  pyproject.toml  settings_test.py
gpt_kicktipp/: gpt_client.py  kicktipp_client.py  settings.py  utils.py
