[tool.poetry]
name = "gpt-kicktipp"
version = "0.1.0"
description = ""
authors = ["Fabian Klemm <fabian.klemm@tngtech.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pandas = "^2.2.2"
beautifulsoup4 = "^4.12.3"
tabulate = "^0.9.0"
lxml = "^5.2.2"
pydantic = "^2.7.4"
html5lib = "^1.1"
jinja2 = "^3.1.4"
openai = "^1.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
